# calcy

./: Cargo.toml  LICENSE  README.md  test1.txt
.github/workflows/: rust.yml
src/: cli.rs  decimal.rs  eval.rs  lib.rs  main.rs  parse.rs  tests.rs
src/tests/: decimal.rs  macros.rs  mod.rs  parse.rs  solve.rs  tokenize.rs
